--- a/tooling/cli/templates/plugin/backend/.github/workflows/lint.yml
+++ b/tooling/cli/templates/plugin/backend/.github/workflows/lint.yml
@@ -21,7 +21,7 @@ jobs:
       - name: install webkit2gtk
         run: |
           sudo apt-get update
-          sudo apt-get install -y webkit2gtk-4.0
+          sudo apt-get install -y webkit2gtk-4.0 libsoup2.4-dev
       - name: Install clippy with stable toolchain
         uses: actions-rs/toolchain@v1
         with:
