--- a/.github/workflows/covector-version-or-publish-v1.yml
+++ b/.github/workflows/covector-version-or-publish-v1.yml
@@ -55,7 +55,7 @@ jobs:
         if: contains(matrix.platform.target, 'unknown-linux')
         run: |
           sudo apt-get update
-          sudo apt-get install -y webkit2gtk-4.0 libayatana-appindicator3-dev
+          sudo apt-get install -y webkit2gtk-4.0 libayatana-appindicator3-dev libsoup2.4-dev
 
       - uses: Swatinem/rust-cache@v2
 
@@ -177,7 +177,7 @@ jobs:
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y webkit2gtk-4.0 webkit2gtk-4.1 libayatana-appindicator3-dev libfuse2
+          sudo apt-get install -y webkit2gtk-4.0 webkit2gtk-4.1 libayatana-appindicator3-dev libfuse2 libsoup2.4-dev
 
       - uses: Swatinem/rust-cache@v2
         with:
