--- a/.github/workflows/lint-cli.yml
+++ b/.github/workflows/lint-cli.yml
@@ -57,7 +57,7 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev
+          sudo apt-get install -y libgtk-3-dev libsoup2.4-dev
 
       - uses: Swatinem/rust-cache@v2
         with:
