--- a/.github/workflows/lint-core.yml
+++ b/.github/workflows/lint-core.yml
@@ -62,7 +62,7 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y webkit2gtk-4.0 libayatana-appindicator3-dev
+          sudo apt-get install -y webkit2gtk-4.0 libayatana-appindicator3-dev libsoup2.4-dev
 
       - uses: actions-rs/toolchain@v1
         with:
