--- a/.github/workflows/test-updater-artifacts.yml
+++ b/.github/workflows/test-updater-artifacts.yml
@@ -40,7 +40,7 @@ jobs:
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y webkit2gtk-4.0 libayatana-appindicator3-dev
+          sudo apt-get install -y webkit2gtk-4.0 libayatana-appindicator3-dev libsoup2.4-dev
 
       - uses: Swatinem/rust-cache@v2
         with:
