--- a/.github/workflows/udeps.yml
+++ b/.github/workflows/udeps.yml
@@ -137,7 +137,7 @@ jobs:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev
+          sudo apt-get install -y libgtk-3-dev libsoup2.4-dev
 
       - uses: Swatinem/rust-cache@v2
         with:
@@ -157,7 +157,7 @@ jobs:
       - name: Install required packages
         run: |
           sudo apt-get update
-          sudo apt-get install -y webkit2gtk-4.0 libayatana-appindicator3-dev
+          sudo apt-get install -y webkit2gtk-4.0 libayatana-appindicator3-dev libsoup2.4-dev
 
       - uses: actions-rs/cargo@v1
         with:
