--- a/tooling/cli/templates/plugin/with-api/.github/workflows/clippy.yml
+++ b/tooling/cli/templates/plugin/with-api/.github/workflows/clippy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y webkit2gtk-4.0
+          sudo apt-get install -y webkit2gtk-4.0 libsoup2.4-dev
 
       - name: Install clippy with stable toolchain
         uses: dtolnay/rust-toolchain@stable
