--- a/.github/workflows/check-change-tags.yml
+++ b/.github/workflows/check-change-tags.yml
@@ -15,7 +15,7 @@ concurrency:
 
 jobs:
   check:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
 
