--- a/tooling/cli/templates/plugin/backend/.github/workflows/audit.yml
+++ b/tooling/cli/templates/plugin/backend/.github/workflows/audit.yml
@@ -19,7 +19,7 @@ on:
 
 jobs:
   audit:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/audit-check@v1
