--- a/.github/workflows/covector-status.yml
+++ b/.github/workflows/covector-status.yml
@@ -7,7 +7,7 @@ on: [pull_request]
 
 jobs:
   covector:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - uses: actions/checkout@v2
