--- a/tooling/cli/templates/plugin/backend/.github/workflows/covector-status.yml
+++ b/tooling/cli/templates/plugin/backend/.github/workflows/covector-status.yml
@@ -4,7 +4,7 @@ on: [pull_request]
 
 jobs:
   covector:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - uses: actions/checkout@v3
