--- a/tooling/cli/templates/plugin/backend/.github/workflows/lint.yml
+++ b/tooling/cli/templates/plugin/backend/.github/workflows/lint.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   clippy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
 
@@ -21,7 +21,7 @@ jobs:
       - name: install webkit2gtk
         run: |
           sudo apt-get update
-          sudo apt-get install -y webkit2gtk-4.0 libsoup2.4-dev
+          sudo apt-get install -y webkit2gtk-4.0
       - name: Install clippy with stable toolchain
         uses: actions-rs/toolchain@v1
         with:
