--- a/tooling/cli/templates/plugin/with-api/.github/workflows/clippy.yml
+++ b/tooling/cli/templates/plugin/with-api/.github/workflows/clippy.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   clippy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
 
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y webkit2gtk-4.0 libsoup2.4-dev
+          sudo apt-get install -y webkit2gtk-4.0
 
       - name: Install clippy with stable toolchain
         uses: dtolnay/rust-toolchain@stable
