latest for cli checks

--- a/.github/workflows/lint-cli.yml
+++ b/.github/workflows/lint-cli.yml
@@ -24,7 +24,7 @@ concurrency:
 
 jobs:
   fmt:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
@@ -42,7 +42,7 @@ jobs:
           args: --manifest-path ./tooling/cli/Cargo.toml --all -- --check
 
   clippy:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
