--- a/tooling/cli/node/package.json
+++ b/tooling/cli/node/package.json
@@ -67,5 +67,8 @@
     "tauri": "node ./tauri.js",
     "format": "prettier --write ./package.json ./tauri.js",
     "format:check": "prettier --check ./package.json ./tauri.js"
+  },
+  "dependencies": {
+    "semver": ">=7.5.2"
   }
 }
