fix(ci): run on ubuntu 22.04 (#11358)
* fix(ci): install libsoup2.4-dev

* update action

* ubuntu 22.04

* fix image

* latest for cli checks

* ubuntu 20.04

* Revert "ubuntu 20.04"

This reverts commit 6fd0ebb2c342accfd73b0a00963e926976a03dd2.

* fix audit

* fix cli audit

--- a/.github/workflows/udeps.yml
+++ b/.github/workflows/udeps.yml
@@ -20,7 +20,7 @@ concurrency:
 
 jobs:
   changes:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     outputs:
       tauri: ${{ steps.filter.outputs.tauri }}
       build: ${{ steps.filter.outputs.build }}
@@ -58,7 +58,7 @@ jobs:
               - 'tooling/cli/**'
 
   setup:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: changes
     if: |
       needs.changes.outputs.tauri == 'true' ||
@@ -120,7 +120,7 @@ jobs:
       matrix: ${{ steps.create-matrix.outputs.matrix }}
 
   udeps:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: setup
     strategy:
       matrix:
