--- a/.github/workflows/covector-version-or-publish-v1.yml
+++ b/.github/workflows/covector-version-or-publish-v1.yml
@@ -133,6 +133,7 @@ jobs:
           cargo update -p xml-rs --precise 0.8.20
           cargo update -p mac-notification-sys --precise 0.6.1
           cargo update -p security-framework-sys --precise 2.11.1
+          cargo update -p openssl --precise 0.10.66
 
       - name: Downgrade crates with MSRV conflict (bundler)
         # This is for the bundler but since cli depends on the bundler we enable it for the cli too
