--- a/crates/tauri-runtime-wry/Cargo.toml
+++ b/crates/tauri-runtime-wry/Cargo.toml
@@ -23,7 +23,7 @@ wry = { version = "0.46.1", default-features = false, features = [
   "os-webview",
   "linux-body",
 ] }
-tao = { version = "0.30.2", default-features = false, features = ["rwh_06"] }
+tao = { path = "../../../tao", default-features = false, features = ["rwh_06"] }
 tauri-runtime = { version = "2.1.0", path = "../tauri-runtime" }
 tauri-utils = { version = "2.0.2", path = "../tauri-utils" }
 raw-window-handle = "0.6"
